--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="description" content="webkid react starterkit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>webkid react starterkit</title>
+    <title>FoodTaste Chess v0.0</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <div class="container"></div>
     <script src="js/main.js"></script>
   </body>
 </html>
