--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="container"></div>
+    <div id="main" class="container"></div>
     <script src="js/main.js"></script>
   </body>
 </html>
